additional Captain's Log species

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -259,6 +259,7 @@
     "Construct.other.disciplines": "Disziplinen",
     "Construct.other.environment": "Herkunft",
     "Construct.other.equipment": "Ausrüstung",
+    "Construct.other.era": "Ära",
     "Construct.other.focus": "Fokus",
     "Construct.other.focus1": "Fokus 1",
     "Construct.other.focus2": "Fokus 2",
