--- a/WebTools/src/i18n/locales/es/translations.json
+++ b/WebTools/src/i18n/locales/es/translations.json
@@ -64,6 +64,7 @@
     "Construct.other.disciplines": "Disciplinas",
     "Construct.other.environment": "Medio ambiente",
     "Construct.other.equipment": "Equipo",
+    "Construct.other.era": "Era",
     "Construct.other.focuses": "Atenciónes",
     "Construct.other.missionProfile": "Perfil de la misión",
     "Construct.other.name": "Nombre",
