--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -173,6 +173,7 @@
     "Construct.other.disciplines": "Disciplines",
     "Construct.other.environment": "Environnement",
     "Construct.other.equipment": "Équipement",
+    "Construct.other.era": "Ère",
     "Construct.other.focus": "Spécialités",
     "Construct.other.focus1": "Spécialité 1",
     "Construct.other.focus2": "Spécialité 2",
